NetBSD Problem Report #42875

From www@NetBSD.org  Tue Feb 23 09:09:28 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 2E26663C594
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 23 Feb 2010 09:09:28 +0000 (UTC)
Message-Id: <20100223090927.CCC1563C49F@www.NetBSD.org>
Date: Tue, 23 Feb 2010 09:09:27 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Cross compile atari on FreeBSD.
X-Send-Pr-Version: www-1.0

>Number:         42875
>Category:       toolchain
>Synopsis:       Cross compile atari on FreeBSD.
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    toolchain-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 23 09:10:00 +0000 2010
>Closed-Date:    Mon Mar 01 02:00:36 +0000 2010
>Last-Modified:  Mon Mar 01 02:00:36 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
I am trying to crosscompile atari on FreeBSD with this error,
dependall ===> tools/tic
#    create  tic/compile.d
/usr/netbsd/tools.atari/bin/nbhost-mkdep -f compile.d --     -I/usr/netbsd/obj.atari/tools/compat -I/usr/netbsd/obj.atari/tools/compat/include  -I/usr/test/src/tools/tic/../compat -DHAVE_NBTOOL_CONFIG_H=1  -D_FILE_OFFSET_BITS=64  -I/usr/test/src/tools/tic/../../usr.bin/tic/../../lib/libterminfo  /usr/test/src/lib/libterminfo/compile.c
#    create  tic/tic.d
/usr/netbsd/tools.atari/bin/nbhost-mkdep -f tic.d --     -I/usr/netbsd/obj.atari/tools/compat -I/usr/netbsd/obj.atari/tools/compat/include  -I/usr/test/src/tools/tic/../compat -DHAVE_NBTOOL_CONFIG_H=1  -D_FILE_OFFSET_BITS=64  -I/usr/test/src/tools/tic/../../usr.bin/tic/../../lib/libterminfo  /usr/test/src/tools/tic/../../usr.bin/tic/tic.c
#    create  tic/.depend
rm -f .depend
/usr/netbsd/tools.atari/bin/nbhost-mkdep -d -f .depend -s .lo\ .ln compile.d hash.d tic.d
#   compile  tic/tic.lo
cc -O -I/usr/netbsd/obj.atari/tools/compat -I/usr/netbsd/obj.atari/tools/compat/include  -I/usr/test/src/tools/tic/../compat -DHAVE_NBTOOL_CONFIG_H=1  -D_FILE_OFFSET_BITS=64  -I/usr/test/src/tools/tic/../../usr.bin/tic/../../lib/libterminfo -c -o tic.lo.o    /usr/test/src/tools/tic/../../usr.bin/tic/tic.c
mv tic.lo.o tic.lo
#   compile  tic/compile.lo
cc -O -I/usr/netbsd/obj.atari/tools/compat -I/usr/netbsd/obj.atari/tools/compat/include  -I/usr/test/src/tools/tic/../compat -DHAVE_NBTOOL_CONFIG_H=1  -D_FILE_OFFSET_BITS=64  -I/usr/test/src/tools/tic/../../usr.bin/tic/../../lib/libterminfo -c -o compile.lo.o    /usr/test/src/lib/libterminfo/compile.c
mv compile.lo.o compile.lo
#      link  tic/tic
cc -O -I/usr/netbsd/obj.atari/tools/compat -I/usr/netbsd/obj.atari/tools/compat/include  -I/usr/test/src/tools/tic/../compat -DHAVE_NBTOOL_CONFIG_H=1  -D_FILE_OFFSET_BITS=64  -I/usr/test/src/tools/tic/../../usr.bin/tic/../../lib/libterminfo   -o tic tic.lo compile.lo hash.lo -L/usr/netbsd/obj.atari/tools/compat -lnbcompat -lz
compile.lo(.text+0x285): In function `_ti_flatten':
: undefined reference to `le16enc'
compile.lo(.text+0x2ab): In function `_ti_flatten':
: undefined reference to `le16enc'
compile.lo(.text+0x2d6): In function `_ti_flatten':
: undefined reference to `le16enc'
compile.lo(.text+0x30a): In function `_ti_flatten':
: undefined reference to `le16enc'
compile.lo(.text+0x325): In function `_ti_flatten':
: undefined reference to `le16enc'
compile.lo(.text+0x337): more undefined references to `le16enc' follow
compile.lo(.text+0x4c9): In function `_ti_find_extra':
: undefined reference to `le16dec'
compile.lo(.text+0x529): In function `_ti_find_extra':
: undefined reference to `le16dec'
compile.lo(.text+0x589): In function `_ti_find_cap':
: undefined reference to `le16dec'
compile.lo(.text+0x5c1): In function `_ti_find_cap':
: undefined reference to `le16dec'
compile.lo(.text+0x770): In function `_ti_store_extra':
: undefined reference to `le16enc'
compile.lo(.text+0x7ee): In function `_ti_store_extra':
: undefined reference to `le16enc'
compile.lo(.text+0x80e): In function `_ti_store_extra':
: undefined reference to `le16enc'
compile.lo(.text+0xd8f): In function `_ti_compile':
: undefined reference to `le16enc'
compile.lo(.text+0xdb6): In function `_ti_compile':
: undefined reference to `le16enc'
compile.lo(.text+0xf28): more undefined references to `le16enc' follow

*** Failed target:  tic
*** Failed command: cc -O -I/usr/netbsd/obj.atari/tools/compat -I/usr/netbsd/obj.atari/tools/compat/include -I/usr/test/src/tools/tic/../compat -DHAVE_NBTOOL_CONFIG_H=1 -D_FILE_OFFSET_BITS=64 -I/usr/test/src/tools/tic/../../usr.bin/tic/../../lib/libterminfo -o tic tic.lo compile.lo hash.lo -L/usr/netbsd/obj.atari/tools/compat -lnbcompat -lz
*** Error code 1

Stop.
nbmake: stopped in /usr/test/src/tools/tic

>How-To-Repeat:

>Fix:
With this fix I am working.

diff -u -r1.1 compile.c
--- lib/libterminfo/compile.c	22 Feb 2010 23:05:39 -0000	1.1
+++ lib/libterminfo/compile.c	23 Feb 2010 07:27:08 -0000
@@ -46,6 +46,9 @@
 #include <string.h>
 #include <term_private.h>
 #include <term.h>
+#if !HAVE_NBTOOL_CONFIG_H || HAVE_SYS_ENDIAN_H
+#include <sys/endian.h>
+#endif

 static void __attribute__((__format__(__printf__, 2, 3)))
 dowarn(int flags, const char *fmt, ...)

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42875 CVS commit: src/lib/libterminfo
Date: Mon, 1 Mar 2010 01:59:49 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon Mar  1 01:59:48 UTC 2010

 Modified Files:
 	src/lib/libterminfo: compile.c

 Log Message:
 compile.c needs sys/endian.h; PR 42875 from Henning Petersen.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/lib/libterminfo/compile.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 01 Mar 2010 02:00:36 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.