compile.c needs sys/endian.h; PR 42875 from Henning Petersen.